--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Project</title>
+    <!-- ICONS -->
+     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+    <!-- FONTS -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- INI STYLE -->
+    <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
-    
+    <!-- Navbar Mulai-->
+     <nav class="navbar">
+        <a href="#" class="navbar-logo">Mabar<span>Rosblox</span>.</a>
+        <div class="navbar-nav">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#Gallery">Gallery</a>
+        </div>
+        <div class="navbar-extra">
+            <a href="#" id="search-button"><i data-feather="search"></i></a>
+            <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
+        </div>
+     </nav>
+    <!-- Navbar Akhir-->
+
+
+
+<!-- Feather Icons -->
+<script>
+  feather.replace();
+</script>
+
+<!-- MY Js Cuy -->
+ <script src="js/main.js"></script>
 </body>
 </html>
