--- a/index.html
+++ b/index.html
@@ -30,6 +30,31 @@
      </nav>
     <!-- Navbar Akhir-->
 
+    <!-- Start Hero Section -->
+     <section class="hero" id="home">
+        <main class="content">
+            <h1>Welcome To My Project <span>Kalea</span></h1>
+            <p>ini hasil dari latihan ku dari youtube WPU<br>moga suka ya babay</p>
+            <a href="#" class="cta">Explore Gallery</a>
+        </main>
+     </section>
+     <!-- End Hero Section -->
+
+     <!-- Start About Section -->
+      <section class="about" id="about">
+        <h2><span>Memorable </span>Moments</h2>
+        <div class="row">
+            <div class="about-img">
+                <img src="img/kale.png" alt="fav foto">
+            </div>
+            <div class="content">
+                <h3>Favorite Photo By Kalea</h3>
+            </div>
+        </div>
+
+      </section>
+     <!-- End About Section -->
+
 
 
 <!-- Feather Icons -->
