--- a/index.html
+++ b/index.html
@@ -18,24 +18,30 @@
     <!-- Navbar Mulai-->
      <nav class="navbar">
         <a href="#" class="navbar-logo">Mabar<span>Rosblox</span>.</a>
+
         <div class="navbar-nav">
             <a href="#home">Home</a>
             <a href="#about">About</a>
+            <a href="#favorite">My Favorite</a>
             <a href="#Gallery">Gallery</a>
         </div>
+
         <div class="navbar-extra">
             <a href="#" id="search-button"><i data-feather="search"></i></a>
             <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
         </div>
      </nav>
+    <!-- Search Form end -->
     <!-- Navbar Akhir-->
+
+
 
     <!-- Start Hero Section -->
      <section class="hero" id="home">
         <main class="content">
             <h1>Welcome To My Project <span>Kalea</span></h1>
             <p>ini hasil dari latihan ku dari youtube WPU<br>moga suka ya babay</p>
-            <a href="#" class="cta">Explore Gallery</a>
+            <a href="#gallery" class="cta">Explore Gallery</a>
         </main>
      </section>
      <!-- End Hero Section -->
@@ -48,12 +54,36 @@
                 <img src="img/kale.png" alt="fav foto">
             </div>
             <div class="content">
-                <h3>Favorite Photo By Kalea</h3>
+                <h3>Favorite Photo By <span>Kalea</span></h3>
+                <p>Kata dia begini:</p>
+                <p class="kata-dia">"first time kita couple walaupun gak sengaja dyemn, terus first time aku kesampean bikin konten naik sepeda di map itu karna sebelumnya cuma dijanji-janjiin (sedih king),
+                     terus kita jadi sering main kan after itu jadi yah ini lumayan berkesan buat aku"</p>
             </div>
         </div>
 
       </section>
      <!-- End About Section -->
+
+     <!-- Start MyFavorite Section -->
+      <section class="favorite" id="favorite">
+        <h2>My <span>Favorite</span> Moment</h2>
+        <div class="row">
+            <div class="content">
+                <h3>Favorite Photo By <span>Xeno</span></h3>
+                <p>Kata dia begini:</p>
+                <p class="kata-dia">"Kalo ini yang kedua soalnya aku suka bangetbangetbanget pas kamu pake avatar ini, terus kamu juga beneran nepatin omongan buat ajak aku sampe puncak (terharu) walaupun aku bikin jadi lama banget karna bug dan dc mulu...tapi kamu tetep sabar nungguin.."</p>
+            </div>
+            <div class="about-img">
+                <img src="img/dika.png" alt="fav foto">
+            </div>
+        </div>
+
+      </section>
+     <!-- End MyFavorite Section -->
+      
+     <!-- Gallery Section Start -->
+
+      <!-- Gallery Section End -->
 
 
 
