--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
         <div class="navbar-nav">
             <a href="#home">Home</a>
-            <a href="#about">About</a>
+            <a href="#about">About Her</a>
             <a href="#favorite">My Favorite</a>
-            <a href="#Gallery">Gallery</a>
+            <a href="#gallery">Gallery</a>
         </div>
 
         <div class="navbar-extra">
@@ -41,7 +41,7 @@
         <main class="content">
             <h1>Welcome To My Project <span>Kalea</span></h1>
             <p>ini hasil dari latihan ku dari youtube WPU<br>moga suka ya babay</p>
-            <a href="#gallery" class="cta">Explore Gallery</a>
+            <a href="#about" class="cta">Explore Gallery</a>
         </main>
      </section>
      <!-- End Hero Section -->
@@ -79,11 +79,58 @@
         </div>
 
       </section>
-     <!-- End MyFavorite Section -->
+    <!-- End MyFavorite Section -->
       
-     <!-- Gallery Section Start -->
+    <!-- Gallery Section Start -->
+    <section class="gallery-all" id="gallery">
+        <h2>Our <span>Gallery</span></h2>
+        <p>Here are some fun snapshots from our gaming sessions, laughter, and unforgettable moments with her.</p>
+        <div class="gallery">
+            <img src="img/gallery/1.png" alt="Image 1">
+            <img src="img/gallery/2.png" alt="Image 2">
+            <img src="img/gallery/3.png" alt="Image 3">
+            <img src="img/gallery/4.png" alt="Image 4">
+            <img src="img/gallery/5.png" alt="Image 5">
+            <img src="img/gallery/6.png" alt="Image 6">
+            <img src="img/gallery/7.png" alt="Image 7">
+            <img src="img/gallery/8.png" alt="Image 8">
+            <img src="img/gallery/9.png" alt="Image 9">
+            <img src="img/gallery/10.png" alt="Image 10">
+            <img src="img/gallery/11.png" alt="Image 11">
+            <img src="img/gallery/12.png" alt="Image 12">
+        </div>
+    </section>
+    <!-- Gallery Section End -->
 
-      <!-- Gallery Section End -->
+
+
+
+    <!-- Footer Start -->
+    <footer>
+        <div class="socials">
+            <a href="https://www/instagram.com/andika_purnama1803" target="_blank">
+                <i data-feather="instagram"></i>
+            </a>
+            <a href="https://github.com/XenoKarma" target="_blank">
+                <i data-feather="github"></i>
+            </a>
+            <a href="https://www.facebook.com/share/g/1BCfs8tBgy/" target="_blank">
+                <i data-feather="facebook"></i>
+            </a>
+        </div>
+
+        <div class="links">
+            <a href="#home">Home</a>
+            <a href="#about">About Her</a>
+            <a href="#favorite">My Favorite</a>
+            <a href="#Gallery">Gallery</a>
+        </div>
+
+        <div class="credit">
+            <p>Created by <a href="">Andika Purnama.</a> | &copy; 2025</p>
+        </div>
+    </footer>  
+    <!-- Footer End -->
 
 
 
