--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </div>
 
         <div class="navbar-extra">
-            <a href="#" id="search-button"><i data-feather="search"></i></a>
-            <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
+            <button href="#" id="search-button"><i data-feather="search"></i></button>
+            <button href="#" id="hamburger-menu"><i data-feather="menu"></i></button>
         </div>
      </nav>
     <!-- Search Form end -->
